--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "divide": "npx ts-node index.ts",
     "build": "tsc --project ./"
   },
-  
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "jest": "^28.1.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   }
