--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "main": "index.ts",
   "scripts": {
     "divide": "npx ts-node index.ts",
+    "test": "jest",
     "build": "tsc --project ./"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "jest": "^28.1.0",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
