--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "scripts": {
     "divide": "npx ts-node index.ts",
     "test": "jest",
+    "service": "npx ts-node ./src/web/service.ts",
     "build": "tsc --project ./"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
